<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TallyBook</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="home_text_income_title">Income</string>
    <string name="home_text_expend_title">Expend</string>
    <string name="home_text_diff_title">Difference</string>
    <string name="home_button_statistics">Statistics</string>
    <string name="home_button_details">Details</string>
    <string name="home_button_add">Quick Add!</string>
    <string name="home_text_no_record">No record!</string>
    <string name="home_image_desc">Statistics Diagram</string>
    <string name="add_record_mode_expend">Expend</string>
    <string name="add_record_mode_income">Income</string>
    <string name="add_record_menu_save">Save</string>
    <string name="add_record_frag_expend_amount">Amount</string>
    <string name="add_record_frag_expend_type">Type</string>
    <string name="add_record_frag_expend_time">Time</string>
    <string name="add_record_frag_expend_remark">Remark</string>
    <string name="add_record_frag_expend_account">Account</string>
    <string name="add_record_frag_expend_curtime">Current Time</string>
    <string name="add_record_frag_income_amount">Amount</string>
    <string name="add_record_frag_income_type">Type</string>
    <string name="add_record_frag_income_time">Time</string>
    <string name="add_record_frag_income_remark">Remark</string>
    <string name="add_record_frag_income_account">Account</string>
    <string name="add_record_frag_income_curtime">Current Time</string>
    <string name="add_record_button_save">Save</string>
    <string name="add_record_button_save_continue">One More</string>
    <string name="add_record_save_toast">Item has been saved!</string>
    <string name="list_record_menu_edit">Edit</string>
    <string name="list_record_context_menu_del">Delete</string>
    <string name="list_record_context_menu_edit">Edit</string>
    <string name="detail_row_text_amount">Amount</string>
    <string name="detail_row_text_type">Type</string>
    <string name="detail_row_text_account">Account</string>
    <string name="detail_row_text_time">Time</string>
    <string name="detail_row_text_remark">Remark</string>
    <string name="detail_row_text_mode_income">Income</string>
    <string name="detail_row_text_mode_expend">Expend</string>
    <string name="detail_menu_edit">Edit</string>
    <string name="public_text_error">Error</string>
    <string name="activity_label_add_record">Add Record</string>
    <string name="activity_label_detail">Detail</string>
    <string name="activity_label_list_record">List Record</string>
    <string name="activity_label_statistics">Statistics</string>
    <string name="activity_label_preference">Preference</string>
    <string name="activity_label_account_mng">Account Manage</string>
    <string name="activity_label_type_mng">Type Manage</string>
    <string name="activity_label_account_dialog">Account Edit</string>
    <string name="activity_label_time_picker">Time Picker</string>
    <string name="activity_label_date_picker">Date Picker</string>
    <string name="activity_label_bug_report">Bug Report</string>
    <string name="tally_list_del_toast">Record has been deleted!</string>
	<string name="statistics_tab_difference">Difference</string>
    <string name="statistics_tab_income">IncomeStatis</string>
    <string name="statistics_tab_expend">ExpendStatis</string>
    <string name="statistics_tab_account_balance">AccountStatis</string>
    <string name="statis_button_pre">&lt;</string>
    <string name="statis_button_next">&gt;</string>
    <string name="statis_month_test">201306</string>
    <string name="statis_diff_row_text_total_income">Total Income</string>
    <string name="statis_diff_row_text_total_expend">Total Expend</string>
    <string name="statis_diff_row_text_balance">Month Balance</string>
    <string name="statis_diff_row_text_year_income">Year Income</string>
    <string name="statis_diff_row_text_year_expend">Year Expend</string>
    <string name="statis_diff_row_text_real_balance">Real Balance</string>
    <string name="statis_diff_row_text_expect_balance">Expect Balance</string>
    <string name="statis_diff_row_text_net_asset">Net Asset</string>
    <string name="statis_diff_row_text_financial_health">Financial Health</string>
    <string name="statis_diff_health_perfect">Perfect! Just keep on!</string>
    <string name="statis_diff_health_good">Good! You can make it beter!</string>
    <string name="statis_diff_health_bad">Watch out your wallet!</string>
    <string name="add_record_menu_list">Details</string>
    <string name="add_record_menu_statistics">Statistics</string>
    <string name="add_record_menu_preference">Preference</string>
    <string name="list_record_menu_add">Add</string>
    <string name="list_record_menu_statistics">Statistics</string>
    <string name="list_record_menu_preference">Preference</string>
    <string name="statis_diff_title_month">Monthly</string>
    <string name="statis_diff_title_year">Yearly</string>
    <string name="prefer_category_title_basic">Basic</string>
    <string name="prefer_category_title_function">Function</string>
    <string name="prefer_category_title_other">Other</string>
    <string name="prefer_swtich_title_sms_analyse">SMS Analyse</string>
    <string name="prefer_swtich_title_notification">Tally Notification</string>
    <string name="prefer_swtich_title_intelligent_analyse">Intelligent Analyse</string>
    <string name="prefer_summary_sms_analyse">This will analyse your SMS to make a Quick Tally</string>
    <string name="prefer_summary_notification">System Notication to take a tally on time</string>
    <string name="prefer_summary_intelligence">This will analyse your behaviour for better experience</string>
    <string name="prefer_switch_on">On</string>
    <string name="prefer_switch_off">Off</string>
    <string name="prefer_func_account_manage">Account Manage</string>
    <string name="prefer_func_type_manage">Tally Type Manage</string>
    <string name="prefer_other_init">Init default settings</string>
    <string name="prefer_other_bugreport">Bug report</string>
    <string name="prefer_other_about">About</string>
    <string name="prefer_summary_account_manage">Manage your accounts, set base value</string>
    <string name="prefer_summary_type_manage">Manage tally type, customize your own type</string>
    <string name="prefer_summary_init">All settings will be initialed!</string>
    <string name="prefer_summary_bugreport">Xiaoyang! no Tsukkomi, no life!</string>
    <string name="prefer_summary_about">A story of Monster</string>
    <string name="add_record_check_amount_toast">Please enter amount!</string>
    <string name="account_mng_add_base">Touch to edit</string>
    <string name="account_dialog_name">Account Name</string>
    <string name="account_dialog_base">Base Value</string>
    <string name="account_dialog_card">Card No.</string>
    <string name="account_dialog_ok">OK</string>
    <string name="account_dialog_cancle">Cancle</string>
    <string name="menu_account_add">Add</string>
    <string name="account_mng_delete_no_permit">Default account can\'t delelte!</string>
    <string name="time_picker_next">Next</string>
    <string name="date_picker_prev">Prev</string>
    <string name="menu_type_add">Add</string>
    <string name="notif_ticker_text">It\'s time to take a Tally!</string>
    <string name="notif_morning_content_title">Tally Reminder</string>
    <string name="notif_morning_content_text">Just haved a nice breakfast? Don\'t forget to take a tally.</string>
    <string name="notif_morning_content_info">Tally Monster</string>
    <string name="notif_noon_content_title">Tally Reminder</string>
    <string name="notif_noon_content_text">What have you eat at launch? Taking tally is a good hebit!</string>
    <string name="notif_noon_content_info">Tally Monster</string>
    <string name="notif_evening_content_title">Tally Reminder</string>
    <string name="notif_evening_content_text">Dinner Time! Don\'t eat too much! :P</string>
    <string name="notif_evening_content_info">Tally Monster</string>
    <string name="notif_night_content_title">Tally Reminder</string>
    <string name="notif_night_content_text">What else have done today?</string>
    <string name="notif_night_content_info">Tally Monster</string>
    <string name="bug_report_email_title">Email</string>
    <string name="bug_report_content_title">Bugs&amp;Suggestions</string>
    <string name="bug_report_button">Commit</string>
    <string name="bug_report_toast">Send Success!</string>
    <string name="bug_report_toast_fail">Send Fail!</string>
    <string name="notif_sms_ticker_text">Here comes a Tally!</string>
    <string name="notif_sms_content_title">Tally Reminder</string>
    <string name="notif_sms_content_text">Seems u have an amount change sms, touch to add tally~</string>
    <string name="notif_sms_content_info">Tally Monster</string>
</resources>