<?xml version="1.0" encoding="utf-8"?>
<preference-headers xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/prefer_category_title_basic" >
        <SwitchPreference
            android:enabled="true"
            android:key="prefer_switch_sms"
            android:selectable="true"
            android:summary="@string/prefer_summary_sms_analyse"
            android:switchTextOff="@string/prefer_switch_off"
            android:switchTextOn="@string/prefer_switch_on"
            android:title="@string/prefer_swtich_title_sms_analyse" />
        <SwitchPreference
            android:disableDependentsState="false"
            android:enabled="true"
            android:key="prefer_switch_notification"
            android:selectable="true"
            android:summary="@string/prefer_summary_notification"
            android:switchTextOff="@string/prefer_switch_off"
            android:switchTextOn="@string/prefer_switch_on"
            android:title="@string/prefer_swtich_title_notification" />
        <SwitchPreference
            android:enabled="true"
            android:key="prefer_switch_intelligence"
            android:selectable="true"
            android:summary="@string/prefer_summary_intelligence"
            android:switchTextOff="@string/prefer_switch_off"
            android:switchTextOn="@string/prefer_switch_on"
            android:title="@string/prefer_swtich_title_intelligent_analyse" />
    </PreferenceCategory>

    <header
        android:summary="An example of some preferences."
        android:title="Prefs 1" />
    <header
        android:summary="Some other preferences you can see."
        android:title="Prefs 2" >

        <!--
             Arbitrary key/value pairs can be included with a header as
             arguments to its fragment.
        -->
        <extra
            android:name="someKey"
            android:value="someHeaderValue" />
    </header>
    <header
        android:summary="Launches an Intent."
        android:title="Intent" >
        <intent
            android:action="android.intent.action.VIEW"
            android:data="http://www.android.com" />
    </header>

</preference-headers>