<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <FrameLayout
        android:id="@+id/home_layout_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp" >

        <ImageView
            android:id="@+id/home_image_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/home_image_desc" />

        <TableLayout
            android:id="@+id/home_table_summary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp" 
            android:layout_marginTop="5dp">

            <TableRow
                android:id="@+id/home_row_income"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/home_row_text_income_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_text_income_title"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/home_row_text_income_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </TableRow>

            <TableRow
                android:id="@+id/home_row_expend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/home_row_text_expend_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_text_expend_title"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/home_row_text_expend_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </TableRow>

            <TableRow
                android:id="@+id/home_row_diff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/home_row_text_diff_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_text_diff_title"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/home_row_text_diff_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </TableRow>
        </TableLayout>
    </FrameLayout>

    <Button
        android:id="@+id/home_button_viewstat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/home_layout_summary"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/home_button_statistics" />

    <TableLayout
        android:id="@+id/home_table_latestrecords"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/home_layout_summary"
        android:layout_below="@+id/home_button_viewstat"
        android:layout_marginTop="10dp" >

        <TableRow
            android:id="@+id/home_row_variable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/home_row_text_norecord"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_text_no_record"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/home_button_viewdetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/home_button_viewstat"
        android:layout_alignRight="@+id/home_button_viewstat"
        android:layout_below="@+id/home_table_latestrecords"
        android:layout_marginTop="10dp"
        android:text="@string/home_button_details" />

    <Button
        android:id="@+id/home_button_addrecord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/home_table_latestrecords"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/home_button_viewdetails"
        android:layout_marginBottom="10dp"
        android:text="@string/home_button_add" />

</RelativeLayout>