<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/bug_report_email_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bug_report_email_title"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/bug_report_email_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/bug_report_content_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bug_report_content_title"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/bug_report_content_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/bug_report_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bug_report_button" />
    </LinearLayout>

</ScrollView>