<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="4dp" android:gravity="center_horizontal">
    
    <!-- Message to show to use. -->
        
    <!-- Alert dialog style buttons along the bottom. -->

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/account_dialog_name_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/account_dialog_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account_dialog_name"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/account_dialog_name_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" >

                <requestFocus />
            </EditText>

        </TableRow>

        <TableRow
            android:id="@+id/account_dialog_base_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/account_dialog_base"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account_dialog_base"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/account_dialog_base_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal" />

        </TableRow>

        <TableRow
            android:id="@+id/account_dialog_card_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/account_dialog_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account_dialog_card"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/account_dialog_card_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" />

        </TableRow>
    </TableLayout>

    <LinearLayout style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:measureWithLargestChild="true">

        <Button
            android:id="@+id/account_dialog_ok"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/account_dialog_ok" />

        <Button
            android:id="@+id/account_dialog_cancle"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/account_dialog_cancle" />

    </LinearLayout>
</LinearLayout>